# AMS

./: .gitignore  README.md
Components Detection/: armWebController.py  camera.py  camera2.py  componentsDetect.py  detectWriting.py  detectall.py  detectionWithRoboflow.py  detectionWritingIC.py  detectparts.py
Components Detection/Testing/: detectIC.py  detectWriting.py  detectionWithRoboflow.py  detectparts.py
Components Detection/Testing/Train IC/datasets/: train.py
Components Detection/yolov5x6/archive/: data.pkl
Components Detection/yolov5x6/archive/data/: 0  1  10  100  102  103  104  105  106  108  109  110  111  112  114  115  116  117  118  12  120  121  122  123  124  126  127  128  129  13  130  132  133  134  135  136  138  139  14  140  (+761 more)
Gerber Detection/: main.py  pcbnew.py  solderpaste_top.gbr
Gerber Detection/DVCU/CAMOutputs/Assembly/: DVCU_04.txt
Gerber Detection/DVCU/CAMOutputs/GerberFiles/: profile.gbr  soldermask_top.gbr
Gerber_Detection/: PnP_PP3_FPGA_Tester_v3_back.txt  PnP_PP3_FPGA_Tester_v3_front.txt  copper_bottom.gbr  gerber_job.gbrjob  main.py  silkscreen_top.gbr  soldermask_bottom.gbr
Gerber_Detection/DVCU/CAMOutputs/Assembly/: PnP_DVCU_04_front.txt
Gerber_Detection/DVCU/CAMOutputs/GerberFiles/: copper_bottom.gbr  copper_top.gbr  gerber_job.gbrjob  silkscreen_bottom.gbr  soldermask_bottom.gbr  solderpaste_bottom.gbr
Gerber_Detection/ES_Adapter/CAMOutputs/Assembly/: PnP_AdapterPlatine_back.txt  PnP_AdapterPlatine_front.txt
Gerber_Detection/ES_Adapter/CAMOutputs/DrillFiles/: drill_1_16.xln
Gerber_Detection/ES_Adapter/CAMOutputs/GerberFiles/: gerber_job.gbrjob  profile.gbr  soldermask_bottom.gbr  soldermask_top.gbr  solderpaste_bottom.gbr
Gerber_Detection/PP3_FPGA_Tester/CAMOutputs/Assembly/: PP3_FPGA_Tester_v3.txt  PnP_PP3_FPGA_Tester_v3_back.txt  PnP_PP3_FPGA_Tester_v3_front.txt
Gerber_Detection/PP3_FPGA_Tester/CAMOutputs/GerberFiles/: copper_top.gbr
PCB_Detection_2/: calibrate_camera.py  example.env  example.env.json  main.py  main_detection.py  main_manual.py  requirements.txt  ros-subscriber-images.py  roslibpy-arm-test.py  roslibpy-head-test.py  roslibpy-tf-test.py  roslibpy_test.py  roslibpy_tf_lookup_result.py  take_calibration_images.py
PCB_Detection_2/PP3_FPGA_Tester/CAMOutputs/GerberFiles/: soldermask_top.gbr
ams_ws/devel/: .catkin  setup.sh
ams_ws/devel/lib/my_controller_pkg/: thk_accuracy  thk_arm_xya2  thk_head  thk_init_pub  thk_tiago2
ams_ws/devel/lib/pkgconfig/: my_controller_pkg.pc
ams_ws/src/: ReadMe.md
ams_ws/src/my_controller_pkg/: CMakeLists.txt
ams_ws/src/my_controller_pkg/config/: controller.yaml
ams_ws/src/my_controller_pkg/launch/: my_controller.launch
ams_ws/src/my_controller_pkg/src/: my_controller.cpp  thk_accuracy.cpp  thk_arm_xya.cpp  thk_arm_xya2.cpp  thk_head.cpp  thk_init_pub.cpp  thk_tiago.cpp  thk_tiago2.cpp
catkin_ws/devel/: .catkin  local_setup.sh
catkin_ws/devel/lib/pkgconfig/: my_controller_controller.pc
catkin_ws/src/my_controller_controller/: CMakeLists.txt  package.xml  plugin_description.xml
catkin_ws/src/my_controller_controller/config/: config.yaml
catkin_ws/src/my_controller_controller/launch/: my_controller.launch
catkin_ws/src/my_controller_controller/src/: .my_controller.cpp.swp  my_controller.cpp
control_ws/: readme.txt
control_ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
control_ws/src/testcont/: CMakeLists.txt  package.xml
control_ws/src/testcont/config/: arm_controllers.yaml  joint_position_controller.yaml
control_ws/src/testcont/launch/: arm_controllers.launch  joint_position_controller.launch
control_ws/src/testcont/scripts/: arm_controllers.py  joint_position_controller.py
ctrl2_ws/: readme.txt
ctrl2_ws/.catkin_tools/profiles/pal_deploy/: config.yaml  devel_collisions.txt
ctrl2_ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
ctrl2_ws/devel/include/my_controller_pkg/: THK_AMS_msg1.h
ctrl2_ws/devel/lib/my_controller_pkg/: thk_arm_xya  thk_arm_xya2  thk_init_pub  thk_tiago  (+1 more)
ctrl2_ws/src/my_controller_pkg/: CMakeLists.txt  package.xml  thk_controllers_plugins.xml
ctrl2_ws/src/my_controller_pkg/config/: controller.yaml
ctrl2_ws/src/my_controller_pkg/launch/: my_controller.launch
ctrl2_ws/src/my_controller_pkg/msg/: THK_AMS_msg1.msg
ctrl2_ws/src/my_controller_pkg/src/: my_controller.cpp  thk_arm_xya.cpp  thk_arm_xya2.cpp  thk_init_pub.cpp  thk_tiago.cpp  thk_tiago2.cpp
docs/: ReadMe_Accuracy.txt  ReadMe_DemoController.txt  ReadMe_TIAGoArmDemo.txt  ReadMe_TIAGoHeadDemo.txt
pcb_detection/: _THK_AMS_msg1.py  calibrate_camera.py  example.env  main.py  main_detection.py  main_manual.py  requirements.txt  ros-publisher.py  ros-subscriber-images.py  ros-subscriber.py  roslibpy-arm-test.py  roslibpy-head-test.py  roslibpy-tf-stream-test.py  take_calibration_images.py
ros/: connect.sh  notes.txt
(+32 files in other folders)
